# pertype

./: .gitignore  CLA.md  COMMERCIAL.md  README.md  THIRD-PARTY-NOTICES.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
compressor/: __init__.py  __main__.py  arithmetic.py  audiocodec.py  auto.py  benchmark.py  bitio.py  cli.py  codec.py  columnar.py  csvcolumnar.py  ctxcoder.py  dictionary.py  floatcodec.py  imagecodec.py  model.py  native.py  predictors.py  tokenizer.py  transform.py  videocodec.py
compressor/_native/: audio.c
docs/: ans-coder-scoping.md  data-type-opportunities.md  productization-plan.md
pertype/: __init__.py  __main__.py  arithmetic.py  audiocodec.py  auto.py  benchmark.py  cli.py  codec.py  columnar.py  csvcolumnar.py  ctxcoder.py  detect.py  floatcodec.py  freqmodel.py  huffman.py  imagecodec.py  model.py  native.py  predictors.py  tokenizer.py  transform.py  videocodec.py  y4m.py
rust/: Cargo.toml  README.md
rust/src/: arith.rs  audiocodec.rs  auto.rs  calic.rs  columnar.rs  csvcolumnar.rs  ctxcoder.rs  floatcodec.rs  imagecodec.rs  lib.rs  predictors.rs  textcodec.rs  transform.rs  videocodec.rs  zlibw.rs
scripts/: ambisonic_benchmark.py  audio_benchmark.py  audio_codec_benchmark.py  audio_ctx_benchmark.py  canbus_benchmark.py  collect_corpus.py  cr2_benchmark.py  cr2_med_benchmark.py  cr2_multiframe.py  cryoem_benchmark.py  csv_benchmark.py  dem_benchmark.py  depth_benchmark.py  ecg_benchmark.py  ecg_ctx_coder.py  eeg_benchmark.py  enwik_benchmark.py  ephys_benchmark.py  fastq_benchmark.py  financial_benchmark.py  float_benchmark.py  float_codec_benchmark.py  flowcytometry_benchmark.py  full_raw_benchmark.py  genome_benchmark.py  hyperspectral_benchmark.py  image_benchmark.py  image_med_benchmark.py  imagecodec_benchmark.py  iot_benchmark.py  json_kitchen_sink.py  json_offset_probe.py  json_repK_probe.py  json_rep_probe.py  json_repaware_ceiling.py  kodak_benchmark.py  lidar_benchmark.py  llm_weights_benchmark.py  make_corpus.py  masspec_benchmark.py  (+30 more)
tests/: run.py  test_arithmetic.py  test_auto.py  test_bitio.py  test_cli.py  test_codec.py  test_columnar.py  test_csvcolumnar.py  test_ctxcoder.py  test_detect.py  test_dictionary.py  test_floatcodec.py  test_huffman.py  test_imagecodec.py  test_model.py  test_predictors.py  test_rust_port.py  test_tokenizer.py  test_transform.py  test_videocodec.py
