[build-system]
requires = ["setuptools>=77"]  # PEP 639 SPDX license expression support
build-backend = "setuptools.build_meta"

[project]
name = "pertype"
version = "0.1.0"
description = "Per-file-type trained lossless compressor — dictionary + LZ + arithmetic coding, with specialist image/audio/video/numeric/columnar codecs"
readme = "README.md"
requires-python = ">=3.9"
# Dual-licensed: AGPL-3.0-or-later for everyone, commercial license available (see COMMERCIAL.md).
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Craig Beech", email = "craigbeech@gmail.com" }]
keywords = ["compression", "lossless", "arithmetic-coding", "dictionary", "lz", "codec"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving :: Compression",
    "Intended Audience :: Developers",
]
# The text/byte core is zero-dependency on purpose; specialist codecs pull deps via extras.
dependencies = []

[project.optional-dependencies]
science = ["numpy", "imagecodecs"]
image = ["numpy", "pillow", "rawpy", "imagecodecs"]
audio = ["numpy", "soundfile"]
video = ["numpy", "imageio-ffmpeg"]
all = ["numpy", "pillow", "rawpy", "imagecodecs", "soundfile", "imageio-ffmpeg"]
dev = ["numpy", "pytest"]

[project.scripts]
pertype = "pertype.cli:main"

[project.urls]
Repository = "https://github.com/cbeech/pertype"

[tool.setuptools.packages.find]
include = ["pertype*"]

[tool.setuptools.package-data]
# ship the C sources so the lazy native build works post-install (falls back to pure Python)
pertype = ["_native/*.c"]
