[package]
name = "pertype"
version = "0.1.0"
edition = "2021"
description = "Lossless per-file-type compressor: trained dictionary + LZ + arithmetic coding, plus specialist image/audio/video/columnar/float codecs — byte-identical to the Python/C reference, and trains its own models."
# Dual-licensed: AGPL-3.0-or-later for everyone, commercial license available (see ../COMMERCIAL.md).
license = "AGPL-3.0-or-later"
authors = ["Craig Beech <craigbeech@gmail.com>"]
repository = "https://github.com/cbeech/pertype"
readme = "README.md"
keywords = ["compression", "lossless", "codec", "arithmetic-coding", "lz"]
categories = ["compression"]

[dependencies]
flate2 = "1"
rayon = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
